2009-03-09  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-xml-config.cc:
	Moved regexes GtkTreeModel from gnome-cmd-data.h to gnome-cmd-advrename-dialog.cc

2009-02-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-chown-component.cc:
	* src/gnome-cmd-chown-dialog.cc:
	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-main-win.cc:
	* src/main.cc:
	* src/owner.cc
	* src/owner.h:
	Fixed problem #567506 (slow startup for systems with many users)

2009-02-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/tags/gnome-cmd-tags.cc:
	typo: filename -> file name

	* libgcmd/gnome-cmd-string-dialog.c:
	* plugins/cvs/cvs-plugin.c:
	* plugins/cvs/interface.c:
	* plugins/fileroller/file-roller-plugin.c:
	* src/gnome-cmd-bookmark-dialog.cc:
	* src/gnome-cmd-chmod-dialog.cc:
	* src/gnome-cmd-chown-dialog.cc:
	* src/gnome-cmd-delete-dialog.cc:
	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-patternsel-dialog.cc:
	* src/gnome-cmd-prepare-xfer-dialog.cc:
	* src/gnome-cmd-xfer-progress-win.cc:
	* src/plugin_manager.cc:
	Fixed problem #571558 (replacing deprecated GNOME_STOCK_* buttons with GTK_STOCK_* counterparts)

2009-02-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/utils.cc:
	GnomeCmdData: more C++ rework

	* libgcmd/libgcmd-widget-factory.c:
	* libgcmd/libgcmd-widget-factory.h:
	* src/gnome-cmd-options-dialog.cc:
	Fixed problem #571239 (replacing obsoleted GnomeColorPicker with GtkColorButton)

	* plugins/cvs/cvs-plugin.c:
	* plugins/fileroller/file-roller-plugin.c:
	* plugins/test/test-plugin.c:
	Fixed problem #571247 (replacing obsoleted GnomePixmap with GtkImage)
